--- a/css/main.css
+++ b/css/main.css
@@ -457,7 +457,7 @@ a {
 #accueil {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 11vw;
   font-weight: 700;
   font-family: Axis;
@@ -476,7 +476,8 @@ a {
   padding: 0;
   width: 30vw; }
 
-#accueil h1 div, #accueil h1 p {
+#accueil h1 div,
+#accueil h1 p {
   transition: opacity 0.5s, margin 0.5s, color 0.5s, transform 0.5s; }
 
 #accueil h1:first-child {
@@ -498,33 +499,31 @@ a {
 #logo p {
   text-align: center;
   font-weight: 600;
-  font-size: 1.1vw;
+  font-size: 17px;
   color: white;
-  padding: 15px 0 0 0;
+  padding: 15px 0;
   margin-top: 18px;
   border-top: 1px solid white; }
 
 #bodyAccueil #logo {
-  width: 120px; }
+  width: 150px; }
 
 #infos {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: space-around;
-  height: 30vh;
-  padding: 9vw;
-  padding-top: 0vw;
+  padding: 5vh 9vw;
   font-weight: 700;
-  margin-top: -5vh;
-  margin-bottom: 100px; }
+  margin-top: 0; }
 
 #infos > div {
-  width: 25%;
+  width: 100%;
+  font-size: 18px;
+  line-height: 19px;
   text-align: center;
-  color: white;
-  font-size: 16px; }
+  color: white; }
 
 #infos > div > div:nth-child(2) {
   height: 10vh;
@@ -537,16 +536,16 @@ a {
 
 #infos > div > div:nth-child(3) {
   border-top: 2px solid #34A2FF;
-  margin-top: 5vh;
-  padding-top: 5vh;
+  margin: 25px 0 100px 0;
+  padding-top: 25px;
   display: flex;
   justify-content: space-between;
   align-items: space-between;
   flex-wrap: wrap; }
 
 #infos > div > div:nth-child(3) > div {
-  width: 6vw;
-  height: 6vw;
+  width: 25vw;
+  height: 25vw;
   background-color: white;
   border-radius: 3px; }
 
@@ -556,13 +555,13 @@ a {
   font-size: 90px;
   padding-bottom: 30px;
   position: relative;
-  left: -50%;
-  top: 35%;
+  top: 3vh;
   z-index: 1; }
 
 #bodyAccueil {
   position: relative;
-  height: 100vh; }
+  min-height: 100vh;
+  padding-bottom: 50px; }
   #bodyAccueil::before {
     content: "";
     position: absolute;
@@ -577,14 +576,38 @@ a {
     z-index: -10; }
 
 #btnListe {
-  width: 290px;
-  margin-top: 120px;
-  font-size: 15px;
-  padding: 30px; }
+  width: 230px;
+  font-size: 14px; }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 400px) {
+  #infos > div > div:nth-child(3) > div {
+    width: 20vw;
+    height: 20vw;
+    background-color: white;
+    border-radius: 3px; }
+  #btnListe {
+    width: 290px;
+    font-size: 15px; } }
+
+@media only screen and (min-width: 800px) {
   #infos {
-    flex-direction: row; } }
+    flex-direction: row; }
+  #infos > div {
+    width: 25%; }
+  #infos > div > div:nth-child(3) > div {
+    width: 6vw;
+    height: 6vw;
+    background-color: white;
+    border-radius: 3px; }
+  #infos > div h1 {
+    font-family: Ubuntu;
+    color: white;
+    font-size: 90px;
+    padding-bottom: 30px;
+    position: relative;
+    left: -50%;
+    top: 35%;
+    z-index: 1; } }
 
 #bodyDestinations {
   position: relative;
@@ -947,6 +970,7 @@ a {
 
 #bodyPaiement {
   max-width: 100vw;
+  height: 100vh;
   position: relative;
   vertical-align: middle;
   background-color: white; }
@@ -965,7 +989,7 @@ a {
 #bodyPaiementRetour {
   position: absolute;
   z-index: 1;
-  top: 60px;
+  top: 150px;
   left: 7.5%;
   color: #32D096;
   text-shadow: none;
@@ -974,19 +998,21 @@ a {
 
 #bodyPaiement #logo {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  width: 150px; }
 
 #main_paiement {
+  position: relative;
+  z-index: 10;
   width: 85%;
-  padding: 120px 0 40px 0;
+  padding: 15vw 0 40px 0;
   margin: 0 auto;
   display: grid;
   grid-gap: 50px;
   grid-template-areas: "infos" "hebergement" "services" "finalisation"; }
 
 #main_paiement section {
-  width: 100%;
-  min-height: 20vw; }
+  width: 100%; }
 
 #main_paiement section:nth-child(1) {
   grid-area: infos; }
@@ -1038,7 +1064,7 @@ a {
 
 #section_hebergement > div {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 20px; }
 
 #section_hebergement > div > div {
@@ -1094,6 +1120,10 @@ a {
 .options_icon {
   width: 4vw;
   height: 4vw;
+  min-width: 30px;
+  min-height: 30px;
+  max-width: 60px;
+  max-height: 60px;
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center; }
@@ -1172,11 +1202,13 @@ a {
 
 #section_finalisation > div:last-child {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end; }
+  align-items: flex-start; }
 
 #section_finalisation .bouton {
   margin: 0;
+  margin-top: 20px;
   padding: 14px 18px !important;
   font-size: 15px;
   font-weight: 600; }
@@ -1186,10 +1218,31 @@ a {
   display: inline-block;
   padding-left: 15px; }
 
+@media screen and (min-width: 800px) {
+  #section_hebergement > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px; }
+  #section_finalisation #total > div:first-child {
+    display: flex; }
+    #section_finalisation #total > div:first-child p:first-child {
+      margin-right: 10px;
+      color: #32D096;
+      font-size: 13px;
+      margin-bottom: 5px; }
+  #section_finalisation > div:last-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end; }
+  #section_finalisation .bouton {
+    margin: 0px; } }
+
 @media screen and (min-width: 1080px) {
+  #bodyPaiementRetour {
+    top: 60px; }
   #main_paiement {
     width: 85%;
-    padding: 120px 0 40px 0;
     margin: 0 auto;
     display: grid;
     grid-gap: 50px;
